ecmascript/parser/tests/test262-error-references/fail/a02fdefc85b71fee.js.stderr
error: Expected ,, got .
 --> $DIR/tests/test262-parser/fail/a02fdefc85b71fee.js:1:18
  |
1 | (function* ({e: a.b}) {})
  |                  ^

